# djangocms-multisite

./: .bumpversion.cfg  .codeclimate.yml  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  cms_helper.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
changes/: 33.feature
djangocms_multisite/: __init__.py  middleware.py
tests/: test_middleware.py  utils.py
tests/test_utils/: urls1.py  urls2.py
