[flake8]
exclude = *.egg-info,.git,.settings,.tox,build,dist,docs,requirements,tmp,*migrations*,*south_migrations*,tests,data
max-line-length = 119

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[isort]
line_length = 119
skip = migrations, .tox
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = djangocms_multisite
multi_line_output = 5
not_skip = __init__.py
