[metadata]
name = djangocms-multisite
version = attr: djangocms_multisite.__version__
url = https://github.com/nephila/djangocms-multisite
author = Iacopo Spalletti
author_email = i.spalletti@nephila.digital
description = django-multisite support for django CMS
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
keywords = djangocms-multisite, django
classifiers =
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires =
	django-multisite
    django-cms
setup_requires =
	setuptools
packages = djangocms_multisite
python_requires = >=3.7
test_suite = cms_helper.run
zip_safe = False

[options.package_data]
* = *.txt, *.rst
djangocms_multisite = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[sdist]
formats = zip

[bdist_wheel]
universal = 1
